test-results/rest_test.err
[31m./examples/rest_test.cup:5:21: error: [0] Macro @join failed: @join expected 1 arguments, but found 4[0m
    const char *s = @join(Alpha, Beta, Gamma, Delta);
                    [31m^[0m
